tests/Houtamelo.Spire.Analyzers.Tests/SPIRE003/cases/Detect_DefaultLiteral_YieldReturn.cs
//@ should_fail
// Ensure that SPIRE003 IS triggered when yield return default; is used in an IEnumerable<EnforceInitializationStruct> iterator.
public class Detect_DefaultLiteral_YieldReturn
{
    public IEnumerable<EnforceInitializationStruct> Method()
    {
        yield return default; //~ ERROR
    }
}
